--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,10 @@
     "strict": true,
     "allowJs": true,
     "esModuleInterop": true,
+    "declaration": true,
+    "emitDeclarationOnly": true,
+    "skipLibCheck": true,
+    "skipDefaultLibCheck": true,
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules"]
