--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
 		"url": "https://github.com/AmrAnwar/LangGraph-UI-SDK/issues"
 	},
 	"homepage": "https://github.com/AmrAnwar/LangGraph-UI-SDK#readme",
-  "license": "ISC",
+  "license": "MIT",
   "devDependencies": {
     "@babel/core": "^7.25.9",
     "@babel/preset-env": "^7.25.9",
