--- a/package.json
+++ b/package.json
@@ -14,7 +14,14 @@
     "start": "webpack --mode=development",
     "build": "webpack --mode=production && tsc"
   },
-  "keywords": ["langgraph", "sdk", "ui", "frontend", "AI", "chatbot"],
+  "keywords": [
+    "langgraph",
+    "sdk",
+    "ui",
+    "frontend",
+    "AI",
+    "chatbot"
+  ],
   "author": "Amro",
   "repository": {
     "type": "git",
@@ -31,10 +38,14 @@
     "@babel/preset-react": "^7.25.9",
     "@babel/preset-typescript": "^7.26.0",
     "@types/react-dom": "^18.3.1",
+    "autoprefixer": "^10.4.20",
     "babel-loader": "^9.2.1",
     "css-loader": "^7.1.2",
     "html-webpack-plugin": "^5.6.3",
+    "postcss": "^8.4.49",
+    "postcss-loader": "^8.1.1",
     "style-loader": "^4.0.0",
+    "tailwindcss": "^3.4.17",
     "webpack": "^5.95.0",
     "webpack-cli": "^5.1.4"
   },
